# sunset

./: CONTRIBUTING.md  Makefile  README.md  pyproject.toml
01_intro/: index.md
02_long/: index.md
03_short/: index.md
04_fired/: index.md
abrupt/: index.md
bibliography/: index.md
deliberate/: index.md
docs/: index.html
docs/01_intro/: index.html
docs/02_long/: index.html
docs/03_short/: index.html
docs/04_fired/: index.html
docs/05_shrink/: index.html
docs/abrupt/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/deliberate/: index.html
docs/finale/: index.html
docs/fired/: index.html
docs/firing/: index.html
docs/glossary/: index.html
docs/handover/: index.html
docs/intro/: index.html
docs/license/: index.html
docs/resilience/: index.html
docs/rushed/: index.html
docs/shutdown/: index.html
extras/: bastian.txt  bib.txt  code-rules.bib  code-rules.tex  interview.txt  juanluis.txt  konrad.txt  links.txt  rejection.txt  rules.txt  words.txt
finale/: index.md
fired/: index.md
firing/: index.md
glossary/: index.md
handover/: index.md
intro/: index.md
resilience/: index.md
rushed/: index.md
shutdown/: index.md
templates/: page.html
